--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2179,8 +2179,8 @@
   <string id="24068">Update available</string>
   <string id="24069">Update</string>
 
-  <string id="24070">Add-on can not used</string>
-  <string id="24071">An unknown error has occurred</string>
+  <string id="24070">Add-on could not be loaded.</string>
+  <string id="24071">An unknown error has occurred.</string>
   <string id="24072">Settings required</string>
   <string id="24073">Could not connect</string>
   <string id="24074">Needs to restart</string>
