--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1885,7 +1885,7 @@
   <string id="20446">Locally stored information found.</string>
   <string id="20447">Ignore and refresh from internet?</string>
   <string id="20448">Could not download information</string>
-  <string id="20449">Server is most likely unavailable.</string>
+  <string id="20449">Unable to connect to remove server</string>
   <string id="20450">Would you like to continue scanning?</string>
   <string id="20451">Countries</string>
   <!-- up to 21329 is reserved for the video db !! !-->
