--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2192,7 +2192,6 @@
   <string id="24075">Disable</string>
   <string id="24080">Try to reconnect?</string>
   <string id="24089">Add-on restarts</string>
-
   <string id="24090">Lock Add-on manager</string>
 
   <string id="24091"></string>
@@ -2200,6 +2199,9 @@
   <string id="24093"></string>
   <string id="24094"></string>
   <string id="24095"></string>
+
+  <string id="24096">Add-on has been marked as broken in repository.</string>
+  <string id="24097">Would you like to disable it on your system?</string>
 
   <!-- strings 29800 thru 29998 reserved strings used only in the default Project Mayhem III skin and not c++ code -->
   <string id="29800">Library Mode</string>
